iot-demo/consumer-app/resources/consumer-app_minikube.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: consumer-app
  labels:
    app: iot-demo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: iot-demo
        name: consumer-app
    spec:
      containers:
        - name: consumer-app
          image: strimzilab/consumer-app:latest
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iot-demo
    name: consumer-app
  name: consumer-app
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: consumer-app
  type: NodePort
