iot-demo/consumer-app/resources/consumer-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: consumer-app
  name: consumer-app
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: consumer-app
