iot-demo/consumer-app/resources/consumer-route.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    name: consumer-app
  name: consumer-app
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: consumer-app
